# mpf-host

./: CMakeLists.txt  CMakeUserPresets.json.example  README.md
.github/workflows/: ci.yml
examples/: 03_plugin_lifecycle.cpp
include/: event_bus_service.h  navigation_service.h  plugin_manager.h  service_registry.h
qml/: Main.qml  SideMenu.qml
src/: application.cpp  event_bus_service.cpp  navigation_service.cpp  plugin_manager.cpp
tests/: CMakeLists.txt  test_event_bus.cpp  test_plugin_dependencies.cpp
